<resources>
    <string name="app_name">AllCast</string>

    <string name="choose_source_app">Выберите приложения - источники:</string>
    <string name="understand">Понял</string>
    <string name="telegram">Telegram</string>
    <string name="we_will_add_later">Добавим позже</string>
    <string name="allcast">ALLCAST</string>
    <string name="telegram_hint">Сейчас откроется приложение Telegram. Выделите небоходимые посты
        из одного канала и нажмите кнопку "скопировать". Приложение AllCast откроется заново.
        <b>У вас должно быть установлено приложение Telegram.</b></string>
    <string name="error_happened">Произошла ошибка</string>
    <string name="next">Следующий</string>
    <string name="play">Играть</string>
    <string name="pause">Приостановить</string>
    <string name="previous">Предыдущий</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="podcast_text">Текст подкаста</string>
    <string name="podcast_description">Описание подкаста</string>
    <string name="close">Закрыть</string>
    <string name="internet_error">Ошибка соединения с сетью</string>
    <string name="app_is_not_installed">Приложение не установлено</string>
    <string name="text_from">Текст из </string>
    <string name="text_from_site">Текст с сайта </string>
    <string name="try_text">Попробовать</string>

    <!--    CHOOSE FRAGMENT-->
    <string name="paragraph_1">Озвучка постов из Telegram</string>
    <string name="paragraph_2">Выберите необходимые публикации и скопируйте их</string>
    <string name="paragraph_3">Наше приложение автоматически откроется и озвучит выбранные посты</string>
    <string name="telegram_description"> Озвучка постов из Telegram \n \n
         • Нажмите кнопку "Попробовать" \n \n
        • Выделите необходимые публикации и нажмите кнопку "скопировать"\n \n
        • Приложение AllCast откроется заново \n \n
        • Внимание! У вас должен быть установлен клиент Telegram</string>


    <!--PLAYER ACTIVITY-->
    <string name="please_wait_until_content_loads">Надо немного подождать. \n Идёт загрузка</string>
    <string name="error_check_internet">Произошла ошибка. \n Проверьте соединение с интернетом</string>
    <string name="try_again">Попробовать снова</string>
    <string name="text_from_app">Текст из приложения</string>
    <string name="text_from_link">Текст по ссылке</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
